--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,97 @@
-// Place all the styles related to the home controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.top {
+  background: linear-gradient(-45deg,#dd3502, #e7e7e7, #07a6e0, #bddad3);
+  width: 100%;
+  height: 100vh;
+  animation: gradient 5s ease infinite;
+  &__nav {
+    list-style: none;
+    display: flex;
+    position: fixed;
+    top: 20px;
+    right: 50px;
+    li {
+      margin-left: 20px;
+    }
+  }
+  &__portfolio {
+    text-align: center;
+    font-size: 100px;
+    padding: 200px 0;
+  }
+  &__name {
+    text-align: center;
+    font-size: 50px;
+  }
+// }
+// @keyframes gradient {
+//   0% {
+//     background-position: 0% 50%;
+//   }
+//   50% {
+//     background-position: 100% 50%;
+//   }
+//   100% {
+//     background-position: 0% 50%;
+//   }
+}
+
+.profile {
+  background-color: #eee;
+  &__title {
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+  }
+  &__image {
+    display: flex;
+    padding: 50px 200px;
+    img {
+      box-shadow: 0 22px 20px 10px rgb(189, 187, 187);
+    }
+  }
+  &__box {
+    margin-left: 30px;
+    &--set {
+      margin-top: 20px;
+    }
+    &--name {
+      font-size: large;
+      font-weight: bold;
+    }
+    &--text {
+      display: inline-block;
+      margin-left: 15px;
+      transition: all .3s ease 0s;
+    }
+    &--text:hover {
+      cursor: pointer;
+      font-size: 20px;
+      color: red;
+    }
+    &__icons {
+      font-size: 50px;
+      display: flex;
+      &--github {
+        color: black;
+        margin-left: 20px;
+        i {
+          color: black;
+        }
+        i:hover {
+          opacity: 0.5;
+          transition: 0.5s;
+        }
+      }
+      &--twitter {
+        margin-left: 20px;
+        i {
+          color: #07a6e0;
+        }
+        i:hover {
+          opacity: 0.5;
+          transition: 0.5s;
+        }
+      }
+    }
+  }
+}
