--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -50,3 +50,27 @@
             = link_to "https://twitter.com/tsubasa_shiga" do
               %i.fab.fa-twitter-square
 
+.portfolio
+  .portfolio__title
+    Portfolio
+  .portfolio__box
+    .portfolio__box__app
+      = link_to "http://18.180.186.77/users/sign_in" do
+        = image_tag src="sample.png"
+      .portfolio__box__app--text
+        -# アプリ名:ChatSpace<br>
+
+    .portfolio__box__app
+      = link_to "http://54.168.222.33/" do
+        = image_tag src="teamapp.jpg"
+    .portfolio__box__app
+      = link_to "http://175.41.197.104/" do
+        = image_tag src="myapp2.jpg"
+
+    .portfolio__box__app
+      = link_to "" do
+        = image_tag src=""
+      .portfolio__box__app--text2
+        Coming Soon...
+
+    .portfolio__box--app
