--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,7 +11,7 @@
   .top__portfolio
     Portfolio
     .top__name
-      TSUBASA KITAGWA
+      TSUBASA KITAGAWA
 
 
 .profile
@@ -82,17 +82,42 @@
     .skill__subtitle
       学習言語・スキル
     .skill__logos
-      .skill__logos--top
-        .skill__logos--HTML5
-          HTML5
-        = image_tag src="html-5.svg",size:"120x130" 
-        = image_tag src="css-3.svg",size:"120x130" 
-        = image_tag src="ruby.svg",size:"120x130"
-        = image_tag src="rails.svg",size:"120x130"
-        = image_tag src="javascript.svg",size:"120x130"
-      .skill__logos--under
-        = image_tag src="aws.svg",size:"120x130"
-        = image_tag src="haml.svg",size:"120x130"
-        = image_tag src="sass.svg",size:"120x130"
-        = image_tag src="docker-icon.svg",size:"120x130"
+      %ul.skill__logos--top
+        %li
+          = image_tag src="html-5.svg",size:"120x130"
+          .skill__logos--topname
+            HTML5
+        %li
+          = image_tag src="css-3.svg",size:"120x130" 
+          .skill__logos--topname
+            CSS3
+        %li
+          = image_tag src="ruby.svg",size:"120x130"
+          .skill__logos--topname
+            Ruby
+        %li
+          = image_tag src="rails.svg",size:"120x130"
+          .skill__logos--topname
+            Ruby on Rails
+        %li
+          = image_tag src="javascript.svg",size:"120x130"
+          .skill__logos--topname
+            JavaScript
+      %ul.skill__logos--under
+        %li  
+          = image_tag src="aws.svg",size:"120x130"
+          .skill__logos--undername
+            AWS
+        %li  
+          = image_tag src="haml.svg",size:"120x130"
+          .skill__logos--undername
+            Haml
+        %li  
+          = image_tag src="sass.svg",size:"120x130"
+          .skill__logos--undername
+            Sass
+        %li  
+          = image_tag src="docker-icon.svg",size:"120x130"
+          .skill__logos--undername
+            Docker
     
