--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,16 +2,19 @@
 .top {
   background: linear-gradient(-45deg,#dd3502, #e7e7e7, #07a6e0, #bddad3);
   height: 100vh;
-  animation: gradient 5s ease infinite;
   &__nav {
     list-style: none;
     display: flex;
     position: fixed;
-    top: 20px;
+    top: 10px;
     right: 50px;
     z-index: 999;
     li {
       margin-left: 20px;
+    }
+    a {
+      color: black;
+      text-decoration: none;
     }
   }
   &__portfolio {
@@ -23,18 +26,8 @@
     text-align: center;
     font-size: 50px;
   }
-// }
-// @keyframes gradient {
-//   0% {
-//     background-position: 0% 50%;
-//   }
-//   50% {
-//     background-position: 100% 50%;
-//   }
-//   100% {
-//     background-position: 0% 50%;
-//   }
 }
+
 
 // プロフィール部
 .profile {
