--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -106,6 +106,7 @@
     text-align: center;
     scroll-snap-type: x mandatory;
     &__app {
+      position: relative;
       flex: none;
       width: 60vw;
       padding: 3vw;
@@ -114,6 +115,12 @@
         font-size: 40px;
         padding-top: 200px;
       }
+      // button {
+      //   margin-top: 20px;
+      //   width: 100px;
+      //   cursor: pointer;
+      //   box-shadow: 0 5px 10px rgb(110, 110, 110);
+      // }
       img {
         transition: box-shadow 1s ease-out, transform .7s ease-out;
       }
@@ -184,4 +191,41 @@
       margin-left: 70px;
     }
   }
+}
+
+#open,
+#close {
+  cursor: pointer;
+  text-align: center;
+  color: red;
+}
+#mask {
+  background: steelblue;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+}
+#modal {
+  background: #eee;
+  color: white;
+  width: 400px;
+  padding: 40px;
+  border-radius: 4px;
+  position: absolute;
+  top: 40px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  z-index: 2;
+}
+
+#mask.hidden {
+  display: none;
+}
+
+#modal.hidden {
+  transform: translate(0, -500px);
 }
